<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".djordje_veljkovic_rn4615.view.activity.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"

    >

    <ImageView
        android:layout_marginTop="25dp"
        android:id="@+id/loginIv"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/redcross"
        android:layout_marginBottom="15dp"
        />
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginTv"
        android:text="@string/informacije_sistema_za_pracenje_stanja_pacijenata_obolelih_od_covid_19"
        android:gravity="center_horizontal"
        android:layout_marginBottom="35dp"
        android:textSize="14sp"

        />
    <EditText
        android:layout_marginTop="5dp"
        android:id="@+id/usernameEt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/unesite_ime"
        android:textSize="14sp"

        />
    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/surnameEt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/unesite_prezime"
        android:textSize="14sp"
        />
    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/bolnicaEt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/unesite_ime_bolnice_u_kojoj_ste_zaposleni"
        android:textSize="14sp"
        />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/pinEt"
        android:inputType="numberPassword"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/unesite_pin"
        android:gravity="center"
        android:textSize="14sp"
        />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="15dp"

        />

</LinearLayout>