<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <TextView
        android:id="@+id/fragmentProfilNaslovTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/podaci_o_zdravstenom_radniku"

        />

    <ImageView
        android:id="@+id/fragmentProfilSlikaIv"
        android:layout_marginTop="25dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/fragmentProfilNaslovTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_profil_korisnika"
        />

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentProfilNImeTv"
        android:text="@string/ime"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentProfilSlikaIv"
        />
    <TextView
        android:layout_marginTop="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentProfilImeTv"
        android:text="@string/fragmentProfilImeText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/fragmentProfilNImeTv"
        />

    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentProfilNPrezimeTv"
        android:text="@string/prezime"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/fragmentProfilImeTv"
        />
    <TextView
        android:layout_marginTop="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentProfilPrezimeTv"
        android:text="@string/fragmentProfilPrezimeText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/fragmentProfilNPrezimeTv"
        />
    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentProfilNBolnicaTv"
        android:text="@string/bolnica"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/fragmentProfilPrezimeTv"
        />

    <TextView
        android:layout_marginTop="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentProfilBolnicaTv"
        android:text="@string/fragmentProfilBolnicaText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/fragmentProfilNBolnicaTv"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentProfilIzmeniBtn"
        android:text="@string/izmeni"
        app:layout_constraintTop_toBottomOf="@id/fragmentProfilBolnicaTv"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/fragmentProfilSlikaIv"

        android:textColor="@color/design_default_color_background"
        android:background="@color/cardview_dark_background"

        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentProfilOdjavaBtn"
        android:text="@string/odjava"
        app:layout_constraintTop_toBottomOf="@id/fragmentProfilBolnicaTv"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="@id/fragmentProfilSlikaIv"
        app:layout_constraintEnd_toEndOf="parent"


        android:textColor="@color/design_default_color_background"
        android:background="@color/cardview_dark_background"

        />



</androidx.constraintlayout.widget.ConstraintLayout>