<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".djordje_veljkovic_rn4615.view.fragments.ListeFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tabMode="fixed"
        app:tabGravity="fill"
        app:tabTextAppearance="@style/TabLayoutStyle">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/fragmentListeTabItemCekaonica"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cekaonica"

            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/fragmentListeTabItemHospitalizovani"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/hospitalizovani"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/fragmentListeTabItemOtpusteni"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/otpusteni"/>

    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerListe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabFragmentLayout"
        >
    </androidx.viewpager.widget.ViewPager>




</androidx.constraintlayout.widget.ConstraintLayout>