<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".djordje_veljkovic_rn4615.view.activity.ProfilActivity"
    >

    <TextView
        android:id="@+id/layoutProfilNaslovTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Podaci o zdravstenom radniku"

        />

    <ImageView
        android:id="@+id/layoutProfilSlikaIv"
        android:layout_marginTop="25dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/layoutProfilNaslovTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_profil_korisnika"
        />

    <EditText
        android:layout_marginTop="50dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/layoutProfilImeEt"
        android:hint="@string/unesite_ime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutProfilSlikaIv"
        />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/layoutProfilPrezimeEt"
        android:text="@string/unesite_prezime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutProfilImeEt"
        />

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/layoutProfilBolnicaEt"
        android:text="@string/unesite_ime_bolnice_u_kojoj_ste_zaposleni"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutProfilPrezimeEt"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layoutProfilOdustaniBtn"
        android:text="Odustani"
        app:layout_constraintTop_toBottomOf="@id/layoutProfilBolnicaEt"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/layoutProfilSlikaIv"


        android:textColor="@color/design_default_color_background"
        android:background="@color/cardview_dark_background"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layoutProfilIzmeniBtn"
        android:text="Izmeni"
        app:layout_constraintTop_toBottomOf="@id/layoutProfilBolnicaEt"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="@id/layoutProfilSlikaIv"
        app:layout_constraintEnd_toEndOf="parent"

        android:textColor="@color/design_default_color_background"
        android:background="@color/cardview_dark_background"

        />



</androidx.constraintlayout.widget.ConstraintLayout>